RTCEth/Import Declarations/Delphi/RTC4ethImport.pas


function  get_driver_status: dword; stdcall; external RTC4ethDLL;
function  get_net_dll_version: dword; stdcall; external RTC4ethDLL;
function  acquire_rtc(card_no: dword): dword; stdcall; external RTC4ethDLL;
function  release_rtc(card_no: dword): dword; stdcall; external RTC4ethDLL;
procedure select_rtc(card_no: word); stdcall; external RTC4ethDLL;
function  assign_rtc(search_no: word; card_no: word): dword; stdcall; external RTC4ethDLL;
function  assign_rtc_by_ip(ip: dword; card_no: word): dword; stdcall; external RTC4ethDLL;
procedure remove_rtc(card_no: word); stdcall; external RTC4ethDLL;
function  convert_string_to_ip(ip: pansichar): dword; stdcall; external RTC4ethDLL;
procedure convert_ip_to_string(ip: dword; cpIp: poutchar); stdcall; external RTC4ethDLL;
procedure convert_mac_to_string(mac: int64; cpMac: poutchar); stdcall; external RTC4ethDLL;
function  rtc_search_cards(var cards: word; ip: dword; netmask: dword): dword; stdcall; external RTC4ethDLL;
function  get_mac_address(cardNo: word): Int64; stdcall; external RTC4ethDLL;
function  get_ip_address(cardNo: word): dword; stdcall; external RTC4ethDLL;
function  get_serial(cardNo: word): dword; stdcall; external RTC4ethDLL;
function  get_connection_status(cardNo: word): word; stdcall; external RTC4ethDLL;
function  get_master_ip_address(cardNo: word): dword; stdcall; external RTC4ethDLL;
function  get_master_id(cardNo: word; id: poutchar): dword; stdcall; external RTC4ethDLL;
function  set_static_ip(ip: dword; netmask: dword; gateway: dword): dword; stdcall; external RTC4ethDLL;
function  get_static_ip(var ip: dword; var netmask: dword; var gateway: dword): dword; stdcall; external RTC4ethDLL;
function  get_mcu_fw_version(cardNo: word): dword; stdcall; external RTC4ethDLL;
function  get_nic_ip_count(var count: word): dword; stdcall; external RTC4ethDLL;
procedure get_nic_ip(count: word; var ip: dword; var nm: dword); stdcall; external RTC4ethDLL;
procedure n_get_waveform(n: word; channel: word; istop: word; MemPtr: pint); stdcall; external RTC4ethDLL;
procedure get_waveform(channel: word; istop: word; MemPtr: pint); stdcall; external RTC4ethDLL;
procedure n_measurement_status(n: word; var busy: wordbool; var position: word); stdcall; external RTC4ethDLL;
procedure measurement_status(var busy: wordbool; var position: word); stdcall; external RTC4ethDLL;
procedure n_set_trigger(n: word; sampleperiod: word; channel1: word; channel2: word); stdcall; external RTC4ethDLL;
procedure set_trigger(sampleperiod: word; signal1: word; signal2: word); stdcall; external RTC4ethDLL;
function  n_get_value(n: word; signal: word): smallint; stdcall; external RTC4ethDLL;
function  get_value(signal: word): smallint; stdcall; external RTC4ethDLL;
procedure n_set_io_bit(n: word; mask1: word); stdcall; external RTC4ethDLL;
procedure set_io_bit(mask1: word); stdcall; external RTC4ethDLL;
procedure n_clear_io_bit(n: word; mask0: word); stdcall; external RTC4ethDLL;
procedure clear_io_bit(mask0: word); stdcall; external RTC4ethDLL;
procedure n_move_to(n: word; position: word); stdcall; external RTC4ethDLL;
procedure move_to(position: word); stdcall; external RTC4ethDLL;
procedure n_control_command(n: word; head: word; axis: word; data: word); stdcall; external RTC4ethDLL;
procedure control_command(head: word; axis: word; data: word); stdcall; external RTC4ethDLL;
procedure n_arc_rel(n: word; dx: smallint; dy: smallint; angle: double); stdcall; external RTC4ethDLL;
procedure arc_rel(dx: smallint; dy: smallint; angle: double); stdcall; external RTC4ethDLL;
procedure n_arc_abs(n: word; x: smallint; y: smallint; angle: double); stdcall; external RTC4ethDLL;
procedure arc_abs(x: smallint; y: smallint; angle: double); stdcall; external RTC4ethDLL;
procedure drilling(PulseWidth: smallint; RelEncoderDelay: smallint); stdcall; external RTC4ethDLL;
procedure regulation; stdcall; external RTC4ethDLL;
procedure flyline(EncoderDelay: smallint); stdcall; external RTC4ethDLL;
procedure set_duty_cycle_table(index: word; dutycycle: word); stdcall; external RTC4ethDLL;
function  n_load_varpolydelay(n: word; stbFileName: pansichar; TableNo: word): smallint; stdcall; external RTC4ethDLL;
function  load_varpolydelay(stbFileName: pansichar; TableNo: word): smallint; stdcall; external RTC4ethDLL;
function  n_load_program_file(n: word; name: pansichar): smallint; stdcall; external RTC4ethDLL;
function  load_program_file(name: pansichar): smallint; stdcall; external RTC4ethDLL;
function  n_load_correction_file(n: word; FileName: pansichar; CorTable: smallint; Kx: double; Ky: double; Phi: double; Xoffset: double; Yoffset: double): smallint; stdcall; external RTC4ethDLL;
function  load_correction_file(FileName: pansichar; CorTable: smallint; Kx: double; Ky: double; Phi: double; Xoffset: double; Yoffset: double): smallint; stdcall; external RTC4ethDLL;
function  n_load_z_table(n: word; A: double; B: double; C: double): smallint; stdcall; external RTC4ethDLL;
function  load_z_table(A: double; B: double; C: double): smallint; stdcall; external RTC4ethDLL;
procedure n_list_nop(n: word); stdcall; external RTC4ethDLL;
procedure list_nop; stdcall; external RTC4ethDLL;
procedure n_set_end_of_list(n: word); stdcall; external RTC4ethDLL;
procedure set_end_of_list; stdcall; external RTC4ethDLL;
procedure n_jump_abs_3d(n: word; x: smallint; y: smallint; z: smallint); stdcall; external RTC4ethDLL;
procedure jump_abs_3d(x: smallint; y: smallint; z: smallint); stdcall; external RTC4ethDLL;
procedure n_jump_abs(n: word; x: smallint; y: smallint); stdcall; external RTC4ethDLL;
procedure jump_abs(x: smallint; y: smallint); stdcall; external RTC4ethDLL;
procedure n_mark_abs_3d(n: word; x: smallint; y: smallint; z: smallint); stdcall; external RTC4ethDLL;
procedure mark_abs_3d(x: smallint; y: smallint; z: smallint); stdcall; external RTC4ethDLL;
procedure n_mark_abs(n: word; x: smallint; y: smallint); stdcall; external RTC4ethDLL;
procedure mark_abs(x: smallint; y: smallint); stdcall; external RTC4ethDLL;
procedure n_jump_rel_3d(n: word; dx: smallint; dy: smallint; dz: smallint); stdcall; external RTC4ethDLL;
procedure jump_rel_3d(dx: smallint; dy: smallint; dz: smallint); stdcall; external RTC4ethDLL;
procedure n_jump_rel(n: word; dx: smallint; dy: smallint); stdcall; external RTC4ethDLL;
procedure jump_rel(dx: smallint; dy: smallint); stdcall; external RTC4ethDLL;
procedure n_mark_rel_3d(n: word; dx: smallint; dy: smallint; dz: smallint); stdcall; external RTC4ethDLL;
procedure mark_rel_3d(dx: smallint; dy: smallint; dz: smallint); stdcall; external RTC4ethDLL;
procedure n_mark_rel(n: word; dx: smallint; dy: smallint); stdcall; external RTC4ethDLL;
procedure mark_rel(dx: smallint; dy: smallint); stdcall; external RTC4ethDLL;
procedure n_write_8bit_port_list(n: word; value: word); stdcall; external RTC4ethDLL;
procedure write_8bit_port_list(value: word); stdcall; external RTC4ethDLL;
procedure n_write_da_1_list(n: word; value: word); stdcall; external RTC4ethDLL;
procedure write_da_1_list(value: word); stdcall; external RTC4ethDLL;
procedure n_write_da_2_list(n: word; value: word); stdcall; external RTC4ethDLL;
procedure write_da_2_list(value: word); stdcall; external RTC4ethDLL;
procedure n_set_matrix_list(n: word; i: word; j: word; Mij: double); stdcall; external RTC4ethDLL;
procedure set_matrix_list(i: word; j: word; Mij: double); stdcall; external RTC4ethDLL;
procedure n_set_offset_list(n: word; Xoffset: smallint; Yoffset: smallint); stdcall; external RTC4ethDLL;
procedure set_offset_list(Xoffset: smallint; Yoffset: smallint); stdcall; external RTC4ethDLL;
procedure n_set_defocus_list(n: word; value: smallint); stdcall; external RTC4ethDLL;
procedure set_defocus_list(value: smallint); stdcall; external RTC4ethDLL;
procedure n_set_defocus(n: word; value: smallint); stdcall; external RTC4ethDLL;
procedure set_defocus(value: smallint); stdcall; external RTC4ethDLL;
procedure n_set_softstart_mode(n: word; mode: word; number: word; restartdelay: word); stdcall; external RTC4ethDLL;
procedure set_softstart_mode(mode: word; number: word; resetdelay: word); stdcall; external RTC4ethDLL;
procedure n_set_softstart_level(n: word; index: word; level: word); stdcall; external RTC4ethDLL;
procedure set_softstart_level(index: word; level: word); stdcall; external RTC4ethDLL;
procedure n_set_control_mode_list(n: word; mode: word); stdcall; external RTC4ethDLL;
procedure set_control_mode_list(mode: word); stdcall; external RTC4ethDLL;
procedure n_set_control_mode(n: word; mode: word); stdcall; external RTC4ethDLL;
procedure set_control_mode(mode: word); stdcall; external RTC4ethDLL;
procedure n_long_delay(n: word; value: word); stdcall; external RTC4ethDLL;
procedure long_delay(value: word); stdcall; external RTC4ethDLL;
procedure n_laser_on_list(n: word; value: word); stdcall; external RTC4ethDLL;
procedure laser_on_list(value: word); stdcall; external RTC4ethDLL;
procedure n_set_jump_speed(n: word; speed: double); stdcall; external RTC4ethDLL;
procedure set_jump_speed(speed: double); stdcall; external RTC4ethDLL;
procedure n_set_mark_speed(n: word; speed: double); stdcall; external RTC4ethDLL;
procedure set_mark_speed(speed: double); stdcall; external RTC4ethDLL;
procedure n_set_laser_delays(n: word; ondelay: smallint; offdelay: smallint); stdcall; external RTC4ethDLL;
procedure set_laser_delays(ondelay: smallint; offdelay: smallint); stdcall; external RTC4ethDLL;
procedure n_set_scanner_delays(n: word; jumpdelay: word; markdelay: word; polydelay: word); stdcall; external RTC4ethDLL;
procedure set_scanner_delays(jumpdelay: word; markdelay: word; polydelay: word); stdcall; external RTC4ethDLL;
procedure n_set_list_jump(n: word; position: word); stdcall; external RTC4ethDLL;
procedure set_list_jump(position: word); stdcall; external RTC4ethDLL;
procedure n_set_input_pointer(n: word; pointer: word); stdcall; external RTC4ethDLL;
procedure set_input_pointer(pointer: word); stdcall; external RTC4ethDLL;
procedure n_list_call(n: word; position: word); stdcall; external RTC4ethDLL;
procedure list_call(position: word); stdcall; external RTC4ethDLL;
procedure n_list_return(n: word); stdcall; external RTC4ethDLL;
procedure list_return; stdcall; external RTC4ethDLL;
procedure n_z_out_list(n: word; z: smallint); stdcall; external RTC4ethDLL;
procedure z_out_list(z: smallint); stdcall; external RTC4ethDLL;
procedure n_set_standby_list(n: word; half_period: word; pulse: word); stdcall; external RTC4ethDLL;
procedure set_standby_list(half_period: word; pulse: word); stdcall; external RTC4ethDLL;
procedure n_timed_jump_abs(n: word; x: smallint; y: smallint; time: double); stdcall; external RTC4ethDLL;
procedure timed_jump_abs(x: smallint; y: smallint; time: double); stdcall; external RTC4ethDLL;
procedure n_timed_mark_abs(n: word; x: smallint; y: smallint; time: double); stdcall; external RTC4ethDLL;
procedure timed_mark_abs(x: smallint; y: smallint; time: double); stdcall; external RTC4ethDLL;
procedure n_timed_jump_rel(n: word; dx: smallint; dy: smallint; time: double); stdcall; external RTC4ethDLL;
procedure timed_jump_rel(dx: smallint; dy: smallint; time: double); stdcall; external RTC4ethDLL;
procedure n_timed_mark_rel(n: word; dx: smallint; dy: smallint; time: double); stdcall; external RTC4ethDLL;
procedure timed_mark_rel(dx: smallint; dy: smallint; time: double); stdcall; external RTC4ethDLL;
procedure n_set_laser_timing(n: word; HalfPeriod: word; Pulse1: word; Pulse2: word; TimeBase: word); stdcall; external RTC4ethDLL;
procedure set_laser_timing(HalfPeriod: word; Pulse1: word; Pulse2: word; TimeBase: word); stdcall; external RTC4ethDLL;
procedure n_set_wobbel(n: word; amplitude: word; frequency: double); stdcall; external RTC4ethDLL;
procedure set_wobbel(amplitude: word; frequency: double); stdcall; external RTC4ethDLL;
